@@ -26,6 +26,8 @@ ChangeLog about GNU GLOBAL
 	  I have merged his code into this version.
 	* Convert.pl added. From now on, usage, help, man, info are
 	  generated automatically by this script from */manual.in files.
+	* gtags, global: make exit code rule:
+	  0:normal, 1:exception, 2:usage, 3:GTAGS not found.
 
 Nov 23 2001, Shigio Yamaguchi  <shigio@tamacom.com>
 
